[package]
name = "bioleptic-py"
version = "0.1.0"
edition = "2024"
description = "Biosignals compression"
readme = "README.md"
keywords = ["compression", "ppg", "ecg", "dsp"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/bioleptic"
categories = ["compression"]
homepage = "https://github.com/awxkee/bioleptic"
repository = "https://github.com/awxkee/bioleptic"
exclude = ["*.jpg", "/assets", "*.png", "*.sh", "/assets/*"]
include = ["/src/", "/README.md", "/LICENSE.md", "/LICENSE-APACHE.md"]
rust-version = "1.88.0"

[dependencies]
bioleptic = { path = "../" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
numpy = "0.28.0"