[package]
name = "bioleptic-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4.2", features = ["derive"] }

[dependencies.bioleptic]
path = ".."

[[bin]]
name = "decoder"
path = "decoder/decoder.rs"
test = false
doc = false
bench = false
